# Covid_19_Dataset

./: README.md  main.py  pyproject.toml
data/: worldometer_covid_dataset.csv
